--- a/Valia-Curated.html
+++ b/Valia-Curated.html
@@ -8,9 +8,9 @@
     :root{--bg:#f7f7fb;--card:#ffffff;--muted:#6b7280;--accent:#0ea5a4}
     *{box-sizing:border-box}
     body{margin:0;font-family:system-ui,-apple-system,Segoe UI,Roboto,'Noto Naskh Arabic',sans-serif;background:var(--bg);color:#111}
-    .wrap{min-height:100vh;display:flex;align-items:center;justify-content:center;padding:24px}
+    .wrap{min-height:100vh;display:flex;align-items:center;justify-content:center;padding:16px;width:100%}
     .card{background:var(--card);width:100%;max-width:760px;border-radius:12px;box-shadow:0 8px 30px rgba(2,6,23,0.08);padding:26px;display:grid;grid-template-columns:1fr 320px;gap:18px}
-    @media (max-width:820px){.card{grid-template-columns:1fr;max-width:520px}}
+    @media (max-width:820px){.card{grid-template-columns:1fr;max-width:100%;width:100%;padding:20px}}}
     .left{display:flex;flex-direction:column;gap:12px;justify-content:center}
     .project-name{font-size:28px;font-weight:700}
     .project-desc{color:var(--muted);line-height:1.5}
@@ -29,10 +29,7 @@
     <div class="card">
       <div class="left">
         <div class="project-name" id="projectName">Valia Curated</div>
-        <div class="project-desc" id="projectDesc">
-           Curated accessories designed tobe timeless relics✨
-Each piece is a rare treasure with enduring value✨
-.</div>
+        <div class="project-desc" id="projectDesc">وصف قصير للمشروع — اكتب جملة أو سطرين يشرحوا الفكرة باختصار.</div>
 
         <div class="links">
           <!-- Facebook -->
