Revise project description for Valia Curated
Updated project description to highlight curated accessories and their value.

--- a/Valia-Curated.html
+++ b/Valia-Curated.html
@@ -29,7 +29,10 @@
     <div class="card">
       <div class="left">
         <div class="project-name" id="projectName">Valia Curated</div>
-        <div class="project-desc" id="projectDesc">وصف قصير للمشروع — اكتب جملة أو سطرين يشرحوا الفكرة باختصار.</div>
+        <div class="project-desc" id="projectDesc">
+          Curated accessories designed tobe timeless relics✨.
+        Each piece is a rare treasure with enduring value✨.
+        </div>
 
         <div class="links">
           <!-- Facebook -->
