Restore description of rare treasures in project section

--- a/Valia-Curated.html
+++ b/Valia-Curated.html
@@ -31,7 +31,6 @@
         <div class="project-name" id="projectName">Valia Curated</div>
         <div class="project-desc" id="projectDesc">
           Curated accessories designed tobe timeless relics✨.
-        Each piece is a rare treasure with enduring value✨.
         </div>
 
         <div class="links">
@@ -48,7 +47,9 @@
           </a>
         </div>
 
-        <div class="note">ملاحظة: افتح الملف في المتصفح بعد استبدال الروابط والصورة.</div>
+        <div class="note">
+          Each piece is a rare treasure with enduring value✨.
+        </div>
       </div>
 
       <div class="right">
