--- a/Valia-Curated.html
+++ b/Valia-Curated.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Valia Curated</title>
+  <title>valia_curated</title>
   <style>
     :root{--bg:#f7f7fb;--card:#ffffff;--muted:#6b7280;--accent:#0ea5a4}
     *{box-sizing:border-box}
